Исправлены замечания ревью